@@ -1,6 +1,6 @@
 name := "lobid-resources-web"
 
-version := "1.0.2-SNAPSHOT"
+version := "2.0.0-SNAPSHOT"
 
 scalaVersion := "2.11.12"
 
@@ -18,7 +18,7 @@ libraryDependencies ++= Seq(
   "com.google.gdata" % "core" % "1.47.1" exclude ("com.google.guava", "guava"),
   "org.easytesting" % "fest-assert" % "1.4" %Test,
   "org.xbib.elasticsearch.plugin" % "elasticsearch-plugin-bundle" % "5.4.1.0",
-  "org.lobid" % "lobid-resources" % "1.0.2-SNAPSHOT" changing()
+  "org.lobid" % "lobid-resources" % "2.0.0-SNAPSHOT" changing()
 )
 
 dependencyOverrides += "com.google.inject" % "guice" % "6.0.0"
@@ -27,9 +27,9 @@ resolvers += "Local Maven Repository" at Path.userHome.asFile.toURI.toURL + ".m2
 
 lazy val root = (project in file(".")).enablePlugins(PlayJava)
 
-javacOptions ++= Seq("-source", "11", "-target", "11")
-javaOptions in (Test,run) += "--add-opens=java.base/java.lang=ALL-UNNAMED"
-javaOptions in (Test,run) += "--add-opens=java.base/java.util=ALL-UNNAMED"
+javacOptions ++= Seq("-source", "21", "-target", "21")
+javaOptions in (Test,run) += "--add-opens=java.base/sun.net.www.protocol.file=ALL-UNNAMED"
+javaOptions in (Test,run) += "--add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED"
 
 import com.typesafe.sbteclipse.core.EclipsePlugin.EclipseKeys
 
